--- a/tex/figures/experimental-design.tex
+++ b/tex/figures/experimental-design.tex
@@ -5,9 +5,10 @@
     \textbf{Overview of experimental design.}
     The first three plots in panel (a) show the environments used in every experiment and whether they reward or punish each base task. 
     Additionally, the last two subplots in (a) show the additional tasks added in phases 2B and 2C. 
-    All novel tasks confer a 10\% metabolic reward, while executing the poisonous task causes a 10\% metabolic punishment (bars not drawn to size). 
-    Panel (b) shows treatment differences and experiment phases. 
-    Treatments are listed on the left, with each treatment consisting of an environment timeline and whether sensors are functional. 
+    All novel tasks in phase 2B confer a 10\% metabolic reward, while executing the poisonous task in phase 2C causes a 10\% metabolic punishment (bars not drawn to scale). 
+    Panel (b) shows treatment differences and experimental phases. 
+    Treatments are listed on the left, with each treatment specifying whether sensors are functional and its environmental configuration.
+    % consisting of an environment timeline and whether sensors are functional. 
     % This also shows Phase 1, the preconditioning phase.  
     We conducted three independent two-phase experiments, each described on the right.
     % We conducted experiments using three different second phases, as shown on the right. 
