--- a/tex/figures/metrics-definitions.tex
+++ b/tex/figures/metrics-definitions.tex
@@ -65,7 +65,8 @@ Final novel task count
 }
 \newcommand{\TaskPerformanceMetricDesc}{
 Count of unique novel tasks performed by the representative organism in a final population from experiment \hyperref[sec:methods:exp:novel-task-evolution]{phase 2B}. 
-This metric can range from 0 to 71 and measures the level of exploitation of the fitness landscape (\textit{i.e.}, the mapping between genetic space and phenotype space) at a given point in time.
+This metric can range from 0 to 71 and measures how well the fitness landscape was exploited  at a given point in time.
+% (\textit{i.e.}, the mapping between genetic space and phenotype space)
 % We focused on an organism from the dominant genotype at the end of the experiment as the most representative phenotype in the evolved population.
 % Final task count is equivalent to the ``task performance'' metric in \citep{canino-koning_fluctuating_2019}.
 }
