--- a/tex/funding.tex
+++ b/tex/funding.tex
@@ -5,8 +5,9 @@
 % This work was supported by funding from TODO
 % AL: Michigan State University (UDF), DGE-1424871
 % AJF: U.S. National Science Foundation grant DEB-1655715 (Should check with Charles to make sure)
-% NG
+% NG DE-SC0019436 Department of Energy
 % CO
 
-This research was supported by the National Science Foundation (NSF) through the BEACON Center (DBI-0939454), a Graduate Research Fellowship to AL (DGE-1424871), and NSF Grant No. DEB-1655715 to CO (which supported AJF). 
+This research was supported by the National Science Foundation (NSF) through the BEACON Center (DBI-0939454), a Graduate Research Fellowship to AL (DGE-1424871), and NSF Grant No. DEB-1655715 and by the Department of Energy through Grant No. DE-SC0019436. 
 
+%  to CO (which supported AJF)
