--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -17,10 +17,10 @@ Here, we use digital organisms (self-replicating computer programs) to investiga
 Specifically, we examined the evolutionary histories of both plastic populations and non-plastic populations to ask:
 (1) Does adaptive plasticity promote or constrain evolutionary change?
 (2) Are plastic populations better able to evolve and then maintain novel traits?
-And (3), how does adaptive plasticity affect the potential for maladaptive traits to accumulate in evolving genomes?
+And (3), how does adaptive plasticity affect the potential for maladaptive alleles to accumulate in evolving genomes?
 We find that populations with adaptive phenotypic plasticity undergo less evolutionary change than non-plastic populations, which must rely on genetic variation from \textit{de novo} mutations to continuously readapt to environmental fluctuations.
 Indeed, the non-plastic populations undergo more frequent selective sweeps and accumulate many more genetic changes.
-We find that the repeated selected sweeps in non-plastic populations drive the loss of beneficial traits via deleterious hitchhiking, whereas phenotypic plasticity can stabilize populations against environmental fluctuations.  
+We find that the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits and accumulation of maladaptive alleles via deleterious hitchhiking, whereas phenotypic plasticity can stabilize populations against environmental fluctuations.  
 This stabilization allows plastic populations to more easily retain novel adaptive traits than their non-plastic counterparts. 
 In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to non-plastic populations evolving in an identical fluctuating environment. 
 All natural environments subject populations to some form of change; our findings suggest that the stabilizing effect of phenotypic plasticity plays an important role in subsequent adaptive evolution.
