--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -10,8 +10,8 @@
 %%%%%%%%%%%%%%%%%%%%%%
 %Fluctuating environmental conditions are ubiquitous in natural systems. 
 Natural organisms employ a wide range of evolved strategies for coping with environmental change, such as 
-bet-hedging \citep{beaumont_experimental_2009}, 
 periodic migration \citep{winger_long_2019}, 
+bet-hedging \citep{beaumont_experimental_2009}, 
 adaptive tracking \citep{barrett_adaptation_2008}
 and phenotypic plasticity \citep{ghalambor_adaptive_2007}.
 The particular mechanisms that evolve in response to fluctuating environments will also shift the course of subsequent evolution \citep{wennersten_population-level_2012,schaum_plasticity_2014}.
@@ -32,9 +32,9 @@ Specifically, we examined the effects of adaptive plasticity on subsequent genom
 % Effects of phenotypic plasticity on subsequent evolution disputed.
 %   - baseline expections on rate of evolutionary response given adaptive vs. non-adaptive plasticity
 %%%%%%%%%%%%%%
-Evolutionary biologists have long been interested in how evolutionary change across generations is influenced by phenotypic plasticity because of its role in generating phenotypic variance \citep{gibert_phenotypic_2019}.
+Evolutionary biologists have long been interested in how evolutionary change is influenced by phenotypic plasticity because of its role in generating phenotypic variance \citep{gibert_phenotypic_2019}.
 The effects of phenotypic plasticity on adaptive evolution have been disputed, as few studies have been able to observe both the initial patterns of plasticity and the subsequent divergence of traits in natural populations \citep{ghalambor_adaptive_2007,wund_assessing_2012,forsman_rethinking_2015,ghalambor_non-adaptive_2015,hendry_key_2016}.
-In a changing environment, adaptive phenotypic plasticity provides a mechanism for organisms to regulate trait expression within their lifetime, which can stabilize populations through changes \citep{gibert_phenotypic_2019}.
+In changing environments, adaptive phenotypic plasticity provides a mechanism for organisms to regulate trait expression within their lifetime, which can stabilize populations through those changes \citep{gibert_phenotypic_2019}.
 In this context, the stabilizing effect of adaptive plasticity has been hypothesized to constrain the rate of adaptive evolution \citep{gupta_study_1982,ancel_undermining_2000,huey_behavioral_2003,price_role_2003,paenke_influence_2007}.
 That is, directional selection may be weak if environmentally-induced phenotypes are close to the optimum; as such, adaptively plastic populations may evolve slowly (relative to non-plastic populations) unless there is a substantial fitness cost to plasticity.
 
@@ -57,7 +57,7 @@ Phenotypic plasticity may also ``rescue'' populations from extinction under chan
 This buffer promotes stability and persistence and grants populations time to further adapt to rapidly changing environmental conditions \citep{west-eberhard_developmental_2003,chevin_when_2010}. 
 
 Disparate predictions about how phenotypic plasticity may shift the course of subsequent evolution are not necessarily mutually exclusive.
-Genetic and environmental contexts determine if and to what extent phenotypic plasticity promotes or constrains subsequent evolution.
+Genetic and environmental contexts determine if, and to what extent, phenotypic plasticity promotes or constrains subsequent evolution.
 Figure \ref{fig:reaction-norms} overviews how we might expect different forms of phenotypic plasticity to result in different evolutionary responses after an environmental change.
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -100,7 +100,7 @@ We build on this previous work, but we shift our focus from the evolutionary cau
 Each of our experiments are divided into two phases: in phase one, we precondition sets of founder organisms with differing plastic or non-plastic adaptations;
 in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions (Figure \ref{fig:experimental-design}).
 First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
-Next, we evaluate how adaptive plasticity influences exploration and exploitation by identifying how well populations produced by each type of founder are able to evolve and retain novel adaptive traits.
+Next, we evaluate how adaptive plasticity influences exploration and exploitation by identifying how well populations produced by each type of founder can evolve and retain novel adaptive traits.
 Finally, we examine lineages to determine whether adaptive plasticity facilitated the accumulation of cryptic genetic variation that would prove deleterious when the environment changed. 
 
 %%%%%%%%%%%%%%%%%%%%%%
