--- a/tex/results.tex
+++ b/tex/results.tex
@@ -62,7 +62,7 @@
 %  - Selective sweeps
 %  - Mutation accumulation
 %  - Phenotypic volatility
-In experimental \hyperref[sec:methods:exp:evolutionary-change-rate]{phase 2A},
+In experimental phase 2A,
 we tested whether adaptive phenotypic plasticity constrained or promoted subsequent evolutionary change in a fluctuating environment. 
 First, we compared the total amount of evolutionary change in populations evolved under the PLASTIC, NON-PLASTIC, and STATIC treatments as measured by coalescence event count, mutation count, and phenotypic volatility (Figure \ref{fig:evolutionary-dynamics-magnitude}).
 According to each of these metrics, NON-PLASTIC populations experienced a larger magnitude of evolutionary change than either PLASTIC or STATIC populations.
@@ -79,7 +79,7 @@ A coalescence event indicates a selective sweep, which is a hallmark of adaptive
 Realized mutational robustness measures the frequency that mutations cause phenotypic changes along a lineage.
 We expect that static conditions should favor fit lineages with high realized mutational robustness that no longer undergo rapid adaptive change and hence do not trigger frequent coalescence events.
 Under fluctuating conditions, however, lineages must be composed of plastic organisms if they are to maintain both high fitness and realized mutational robustness.
-Without plasticity, we expect fluctuating conditions to produce lineages with low realized mutational robustness and frequent coalescence events as populations must continually readapt.
+Without plasticity, we expect fluctuating conditions to produce lineages with low realized mutational robustness and frequent coalescence events as populations must continually acquire and fix mutations to readpt to the environment.  
 
 \input{tex/figures/evolutionary-change-pace-panel}
 
@@ -89,7 +89,7 @@ We also found that both STATIC and PLASTIC lineages exhibited higher realized mu
 Overall, our results indicate that NON-PLASTIC populations underwent more rapid (and thus a greater amount of) evolutionary change than either PLASTIC or STATIC populations. 
 
 % -- Mutational stability in static and plastic lineages --
-While both STATIC and PLASTIC lineages exhibited high realized mutational robustness, we found that STATIC lineages exhibited higher robustness than PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b). 
+While both STATIC and PLASTIC lineages exhibited high realized mutational robustness, we found that STATIC lineages exhibited higher realized robustness than PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b). 
 Overall, there were rare instances of mutations that caused a change in phenotypic profile across all PLASTIC lineages.
 Of these mutations, we found that over 80\% (83 out of 102) of changes to phenotypic profiles were cryptic. 
 That is, the mutations affected traits that would not have been expressed in the environment that the organism was born into but would have been expressed had the environment changed.
@@ -121,9 +121,9 @@ These data provide evidence against NON-PLASTIC lineages engaging in a mutation-
 
 
 % -- in general, PLASTIC and STATIC more similar than NON-PLASTIC --
-In general, adaptive plasticity stabilized PLASTIC treatment populations against environmental fluctuations, and their evolutionary dynamics more closely resembled those of populations evolving in a static environment.
+In general, adaptive plasticity stabilized PLASTIC-treatment populations against environmental fluctuations, and their evolutionary dynamics more closely resembled those of populations evolving in a static environment.
 We observed no significant difference in the number and frequency of coalescence events in PLASTIC and STATIC populations.
-We did, however, observe small, but statistically significant, differences in each of the following metrics: elapsed generations, mutation counts, realized mutational robustness, and architectural volatility between PLASTIC and STATIC populations (see supplemental material \citealt{supplemental_material}).
+We did, however, observe small, but statistically significant, differences in each of the following metrics: elapsed generations, mutation counts, mutational robustness, realized mutational robustness, and architectural volatility between PLASTIC and STATIC populations. % (see supplemental material \citealt{supplemental_material}).
 
 \vspace{0.5cm}
 \subsection{Adaptively plastic populations retain more novel tasks than non-plastic populations in fluctuating environments}
@@ -215,13 +215,13 @@ Accordingly, if a \code{poison} instruction fixes in a population, it must be th
 
 % -- Instruction execution by final dominant & along lineage --
 At the end of our experiment, no representative organisms from the PLASTIC or STATIC treatments performed the poisonous task under any environmental condition; however, representative organisms in 14\% of replicates of the NON-PLASTIC treatment performed the poisonous task at least once. 
-NON-PLASTIC lineages contained significantly more mutations that conferred the poisonous task as compared to PLASTIC or STATIC lineages (Figure \ref{fig:deleterious-hitchhiking}a), and these mutations occurred at a significantly higher frequency on NON-PLASTIC lineages (Figure \ref{fig:deleterious-hitchhiking}b).
+NON-PLASTIC lineages contained significantly more mutations that conferred the poisonous task as compared to PLASTIC or STATIC lineages (Figure \ref{fig:deleterious-hitchhiking}a), and these mutations occurred at a significantly higher frequency in NON-PLASTIC lineages (Figure \ref{fig:deleterious-hitchhiking}b).
 % Additionally, we did not observe 
 % This result does not change when we normalize [what?] by the number of generations represented in the given lineage (Figure \ref{fig:deleterious-hitchhiking}b).
 
 % -- When/where does hitchhiking take place? --
 Next, we measured how often mutations that increased poisonous task performance co-occurred with changes to the base task profile within representative lineages.
-A poisonous instruction can fix in a lineage by having a beneficial effect that outweighs its inherent cost (\textit{e.g.}, knocking out a punished task) or through linkage with a secondary beneficial mutation at another site within in the genome.
+A poisonous instruction can fix in a lineage by having a beneficial effect that outweighs its inherent cost (\textit{e.g.}, knocking out a punished task) or through linkage with a secondary beneficial mutation at another site within the genome.
 Across all NON-PLASTIC representative lineages, we found that approximately 49\% (956 out of 1916) of mutations that increased poisonous task expression co-occurred with a change in the base task profile (Figure \ref{fig:deleterious-hitchhiking}c).
 In all representative lineages from the PLASTIC treatment, only 18 mutations increased poisonous task expression, and none co-occurred with a change in base task profile (Figure \ref{fig:deleterious-hitchhiking}c).
 Likewise, only 58 mutations increased poisonous task performance in all representative lineages from the STATIC treatment, and none co-occurred with a change in base task profile (Figure \ref{fig:deleterious-hitchhiking}c).
