--- a/tex/figures/experimental-design.tex
+++ b/tex/figures/experimental-design.tex
@@ -7,7 +7,7 @@
     Additionally, the last two subplots in (a) show the additional tasks added in phases 2B and 2C. 
     All novel tasks in phase 2B confer a 10\% metabolic reward, while executing the poisonous task in phase 2C causes a 10\% metabolic punishment (bars not drawn to scale). 
     Panel (b) shows treatment differences and experimental phases. 
-    Treatments are listed on the left, with each treatment specifying whether sensors are functional and its environmental configuration.
+    Treatments are listed on the left, with each treatment specifying its environmental configuration and whether sensors are functional.
     % consisting of an environment timeline and whether sensors are functional. 
     % This also shows Phase 1, the preconditioning phase.  
     We conducted three independent two-phase experiments, each described on the right.
