--- a/tex/funding.tex
+++ b/tex/funding.tex
@@ -8,6 +8,6 @@
 % NG DE-SC0019436 Department of Energy
 % CO
 
-This research was supported by the National Science Foundation (NSF) through the BEACON Center (DBI-0939454), a Graduate Research Fellowship to AL (DGE-1424871), and NSF Grant No. DEB-1655715 and by the Department of Energy through Grant No. DE-SC0019436. 
+This research was supported by the Department of Energy through Grant No. DE-SC0019436 and by the National Science Foundation (NSF) through the BEACON Center (DBI-0939454), a Graduate Research Fellowship to AL (DGE-1424871), and NSF Grant No. DEB-1655715. 
 
 %  to CO (which supported AJF)
