--- a/references.bib
+++ b/references.bib
@@ -62,7 +62,7 @@
 	number = {3},
 	urldate = {2021-02-09},
 	journal = {Functional Ecology},
-	author = {Ghalambor, C. K. and McKAY, J. K. and Carroll, S. P. and Reznick, D. N.},
+	author = {Ghalambor, C. K. and McKay, J. K. and Carroll, S. P. and Reznick, D. N.},
 	month = jun,
 	year = {2007},
 	pages = {394--407},
@@ -1081,4 +1081,18 @@
 	month = sep,
 	year = {2009},
 	pages = {487--496}
+}
+
+@inproceedings{lalejini_evolving_2018,
+	address = {Tokyo, Japan},
+	title = {Evolving {Reactive} {Agents} with {SignalGP}},
+	copyright = {All rights reserved},
+	url = {https://www.mitpressjournals.org/doi/abs/10.1162/isal_a_00069},
+	doi = {10.1162/isal_a_00069},
+	urldate = {2021-05-19},
+	booktitle = {The 2018 {Conference} on {Artificial} {Life}},
+	publisher = {MIT Press},
+	author = {Lalejini, Alexander and Ofria, Charles},
+	year = {2018},
+	pages = {368--369}
 }
