--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -7,5 +7,5 @@
 
 We thank members of the MSU Digital Evolution Lab for helpful comments and suggestions on this work. 
 We also thank Luis Zaman whose keynote talk at the 2020 Artificial Life conference inspired the initial exploratory experiments from which this work blossomed. 
-Michigan State University provided computational resources through the Institute for Cyber-Enabled Research. 
-Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the NSF or MSU.
+MSU provided computational resources through the Institute for Cyber-Enabled Research. 
+Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation, Department of Energy, Michigan State University, or The University of Idaho.
