--- a/tex/figures/novel-tasks-magnitude-panel.tex
+++ b/tex/figures/novel-tasks-magnitude-panel.tex
@@ -9,7 +9,7 @@
     and (c) novel task loss.
     See Table \ref{tab:metrics-definitions} for descriptions of each metric.
     Each plot is annotated with statistically significant comparisons (Bonferroni-corrected pairwise Wilcoxon rank-sum tests).
-    Note that adaptive phenotypic plasticity evolved in \novelTraitsPlasticReps\ of \novelTraitsReplicates\ replicates from the PLASTIC treatment during phase one of Experiment II; we used this more limited group to seed the resulting \novelTraitsPlasticReps\ phase-two PLASTIC replicates.
+    Note that adaptive phenotypic plasticity evolved in \novelTraitsPlasticReps\ of \novelTraitsReplicates\ replicates from the PLASTIC treatment during phase one of this experiment; we used this more limited group to seed the resulting \novelTraitsPlasticReps\ phase-two PLASTIC replicates.
     }
     \label{fig:complex-traits-magnitude}
 \end{figure}
