--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -12,11 +12,11 @@
 Natural organisms employ a wide range of evolved strategies for coping with environmental change, such as 
 periodic migration \citep{winger_long_2019}, 
 bet-hedging \citep{beaumont_experimental_2009}, 
-adaptive tracking \citep{barrett_adaptation_2008}
+adaptive tracking \citep{barrett_adaptation_2008},
 and phenotypic plasticity \citep{ghalambor_adaptive_2007}.
 The particular mechanisms that evolve in response to fluctuating environments will also shift the course of subsequent evolution \citep{wennersten_population-level_2012,schaum_plasticity_2014}.
 %Identifying the mechanisms most likely to evolve and examining both the evolutionary constraints and opportunities associated with each is critical for us to understand and predict evolutionary outcomes in changing environments.
-As such, if we are to understand or predict evolutionary outcomes we must be able to identify which mechanisms are most likely to evolve and what constraints and opportunities they impart on subsequent evolution.
+As such, if we are to understand or predict evolutionary outcomes, we must be able to identify which mechanisms are most likely to evolve and what constraints and opportunities they impart on subsequent evolution.
 
 %%%%%%%%%%%%%%%%%%%%%%
 % -- We focus on how plasticity affects subsequent evolution. --
@@ -100,14 +100,14 @@ We build on this previous work, but we shift our focus from the evolutionary cau
 Each of our experiments are divided into two phases: in phase one, we precondition sets of founder organisms with differing plastic or non-plastic adaptations;
 in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions (Figure \ref{fig:experimental-design}).
 First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
-Next, we evaluate how adaptive plasticity influences exploration and exploitation by identifying how well populations produced by each type of founder can evolve and retain novel adaptive traits.
+Next, we evaluate how adaptive plasticity influences how well populations produced by each type of founder can evolve and retain novel adaptive traits.
 Finally, we examine lineages to determine whether adaptive plasticity facilitated the accumulation of cryptic genetic variation that would prove deleterious when the environment changed. 
 
 %%%%%%%%%%%%%%%%%%%%%%
 % - Overview of findings -
 %%%%%%%%%%%%%%%%%%%%%%
 We found that the evolution of adaptive plasticity reduced subsequent rates of evolutionary change in a cyclic environment.
-The non-plastic populations underwent more frequent selective sweeps and accumulated many more genetic changes over time, as non-plastic populations relied on genetic variation from \textit{de novo} mutations to continuously re-adapt to environmental changes. 
+The non-plastic populations underwent more frequent selective sweeps and accumulated many more genetic changes over time, as non-plastic populations relied on genetic variation from \textit{de novo} mutations to continuously readapt to environmental changes. 
 The evolution of adaptive phenotypic plasticity buffered populations against environmental fluctuations, whereas repeated selective sweeps in non-plastic populations drove the accumulation of deleterious mutations and the loss of secondary beneficial traits via deleterious hitchhiking.
 As such, adaptively plastic populations were better able to retain novel traits than their non-plastic counterparts.
 In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to non-plastic populations evolving in an identical fluctuating environment. 
